goprotobuf: sync from Google internal version.
Interesting changes:
  - String method on protocol buffer message types
    that renders the message in compact text format.
  - Extension text formatting.

R=r
CC=golang-dev
http://codereview.appspot.com/4643050

--- a/compiler/testdata/Makefile
+++ b/compiler/testdata/Makefile
@@ -45,7 +45,7 @@ test:	golden testbuild extension_test
 
 golden:
 	$(QUOTED_GOBIN)/gomake -B test.pb.go
-	diff test.pb.go test.pb.go.golden
+	diff -w test.pb.go test.pb.go.golden
 
 nuke:	clean
 
