goprotobuf: Add a proto.Clone function.
R=r
CC=golang-dev
http://codereview.appspot.com/4950077

--- a/proto/Makefile
+++ b/proto/Makefile
@@ -34,6 +34,7 @@ include $(GOROOT)/src/Make.inc
 
 TARG=goprotobuf.googlecode.com/hg/proto
 GOFILES=\
+	clone.go\
 	decode.go\
 	encode.go\
 	equal.go\
