goprotobuf: update to go 1 import strings
R=dsymonds
CC=golang-dev
http://codereview.appspot.com/5496065

--- a/compiler/descriptor/Makefile
+++ b/compiler/descriptor/Makefile
@@ -31,7 +31,7 @@
 
 include $(GOROOT)/src/Make.inc
 
-TARG=goprotobuf.googlecode.com/hg/compiler/descriptor
+TARG=code.google.com/p/goprotobuf/compiler/descriptor
 GOFILES=\
 	descriptor.pb.go\
 
